Fixed add content spacing

--- a/frontend/src/components/newsfeed_addcontent/add_content.css
+++ b/frontend/src/components/newsfeed_addcontent/add_content.css
@@ -326,3 +326,7 @@
 .main-content-container {
     margin-left: 250px;
 }
+
+.add-content-list-container {
+    margin-left: 250px;
+}
